--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <input class="search" type="text" placeholder="search" />
         <button class="search__btn" type="submit"></button>
       </form>
-      <div class="box__container"></div>
+      <div class="box__container">
+        <div class="loader__container"></div>
+      </div>
     </div>
     <script src="./js/index.js"></script>
   </body>
