--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="box__container">
         <div class="loader__container"></div>
       </div>
+      <div class="pages__wrapper"></div>
     </div>
     <script src="./js/index.js"></script>
   </body>
